# COFFLoader

./: .gitignore  CMakeLists.txt  CMakePresets.json  COFFLoader.c  COFFLoader.h  Makefile  beacon_compatibility.c  main.c  meson.build
COFFLoader/: CMakeLists.txt  COFFLoader.c  COFFLoader.h  beacon_compatibility.c  beacon_compatibility.h  main.c
cmake/: COFFLoaderConfig.cmake.in
include/COFFLoader/: COFFLoader.h
src/: .gitignore  CMakeLists.txt  COFFLoader.c  Makefile  beacon_compatibility.h  main.c  meson.build
toolchains/: mingw.cmake  mingw32-meson.ini  mingw64-meson.ini
